--- a/goth-ecommerce/package.json
+++ b/goth-ecommerce/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/cookie": "^0.6.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node-fetch": "^2.6.11",
     "formik": "^2.4.5",
+    "jose": "^5.2.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.3",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
