Added mongo database, schemas, and api routes for signin/signup/getsession

--- a/goth-ecommerce/package.json
+++ b/goth-ecommerce/package.json
@@ -12,6 +12,7 @@
     "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node-fetch": "^2.6.11",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.5",
     "jose": "^5.2.3",
     "jsonwebtoken": "^9.0.2",
