--- a/goth-ecommerce/package.json
+++ b/goth-ecommerce/package.json
@@ -18,8 +18,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "ts-node": "^10.9.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
